--- a/03.id属性とclass属性/styles.css
+++ b/03.id属性とclass属性/styles.css
@@ -1,3 +1,40 @@
 /* 6つのp要素に適用するスタイルを宣言 */
+p {
+    background-color: blue;
+}
+
+.white {
+    color: white;
+}
+
+.yellow {
+    color: yellow;
+}
+
+.red {
+    color: red;
+}
 
 /* 6つのli要素に適用するスタイルを宣言 */
+.blue {
+    color: blue;
+}
+
+.back-gray {
+    background-color: gray;
+}
+
+.back-green {
+    background-color: green;
+}
+.back-brown {
+    background-color: brown;
+}
+
+.size {
+    font-size: 16px;
+}
+
+#size {
+    font-size: 12px
+}
