--- a/08.角を丸めたり影を追加してみよう/styles.css
+++ b/08.角を丸めたり影を追加してみよう/styles.css
@@ -9,7 +9,6 @@ header {
   background-color: #192F60;
   color: white;
   margin-top: 10px;
-  border-radius: 20px 20px 0 0;
 }
 
 h1, h3 {
@@ -21,8 +20,8 @@ h1, h3 {
 div {
   display: flex;
   background-color: #FAC559;
-  height: 160px;
   border-radius: 0 0 20px 20px;
+  height: 150px;
 }
 
 ul {
@@ -32,27 +31,33 @@ ul {
 
 li {
   list-style: none;
-  font-size: 12px;
+  font-size: 15px;
   width: 244px;
   padding: 2px 8px 2px 2px;
   margin: 4px 10px 4px 0;
   color: #192F60;
-  border-radius: 8px;
+}
+
+li {
   border: #192F60 1px solid;
+  border-radius: 8px;
+}
+
+header {
+  border-radius: 20px 20px 0 0;
 }
 
 main {
-  width: auto;
-}
-
-
-/* li要素にスタイルを適用 */
-
-/* header要素にスタイルを適用 */
-
-/* div要素にスタイルを適用 */
-
-/* main要素内にスタイルを適用 */
-p {
+  flex: 1; /* 残りスペースを全部使う */
   overflow: auto;
+  padding: 10px;
 }
+
+nav {
+  flex: 0 0 260px; /* 固定幅 */
+  margin: 10px;
+}
+
+
+
+
