--- a/11.代替ボックスモデル/styles.css
+++ b/11.代替ボックスモデル/styles.css
@@ -36,17 +36,25 @@ main {
   text-align: center;
 }
 
-div {
+main div {
   margin: 10px;
   background-color: #EAD7A4;
   text-align: center;
+  box-sizing: border-box;
+  width: 320px;
+  height: 360px;
+  border: 1px solid #800000;
+  display: inline-block;
 }
 
 img {
   margin: 10px 0;
+  width: 300px;
+  height: 300px;
 }
 
 
 /* img要素にスタイルを適用 */
+
 
 /* div要素にスタイルを適用 */
