--- a/13.グリッドレイアウト1/styles.css
+++ b/13.グリッドレイアウト1/styles.css
@@ -4,7 +4,7 @@
   background-color: cadetblue;
 }
 
-div div {
+.st {
   outline: 1px black solid;
   background-color: bisque;
   text-align: center;
@@ -12,9 +12,37 @@ div div {
 
 
 /* 1. containerクラスにスタイルを適用 */
+.container {
+  display: grid;
+  grid-template-rows: 100px 100px 100px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
 
 /* 2. containerクラスにスタイルを適用 */
+.container {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px;
+  justify-content: space-evenly;
+} 
 
 /* 3. containerクラスにスタイルを適用 */
+.container {
+  display: grid;
+  grid-template-rows: 100px 100px 100px;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: end;
+}
 
 /* 4. containerクラスにスタイルを適用 */
+.container {
+  display: grid;
+  grid-template-rows: 100px 100px 100px;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: stretch;
+  gap: 10px 150px;
+}
+
+
+
+
